<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guided_verticalFifety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guided_verticalTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guided_verticalEight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".8"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guided_horizontalThirty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".34"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guided_horizontalSixty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".64"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guided_horizontalNinety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".96"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_quranRecitation_Rules"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guided_horizontalThirty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guided_verticalFifety"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardPreventCornerOverlap="true"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rules_of_quran_recitation"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guided_horizontalThirty"
            app:layout_constraintStart_toStartOf="@+id/guided_verticalFifety"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sura_uses_in_namaz"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guided_horizontalThirty"
            app:layout_constraintBottom_toBottomOf="@+id/guided_horizontalSixty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guided_verticalFifety"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doa_uses_in_namaz"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/guided_horizontalThirty"
            app:layout_constraintBottom_toBottomOf="@+id/guided_horizontalSixty"
            app:layout_constraintStart_toStartOf="@+id/guided_verticalFifety"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masnun_doa"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guided_horizontalSixty"
            app:layout_constraintBottom_toBottomOf="@+id/guided_horizontalNinety"
            app:layout_constraintStart_toStartOf="@+id/guided_verticalTwo"
            app:layout_constraintEnd_toEndOf="@+id/guided_verticalEight"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasbih"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>